--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -13,8 +13,11 @@
   <header>
 <%= render 'layouts/header' %>
 </header>
-          
+
 <div class="container">
+  <% flash.each do |name, msg| %>
+    <%= content_tag(:div, msg, class: "alert alert-info") %>
+  <% end %>
 <%= yield %>
 </div>
 </body>
