--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,5 +8,6 @@
   margin-bottom: 20px;
 }
 
-.station-image {display:inline-block;margin-right:10px; width:230px;}
-.station-data {float:right;margin-left:10px;width: 1000px;background-color:red;} 
+.station-image {display:inline-block;margin-right:5%; width:10%;}
+.station-data {float:right;margin-left:0;width:85%;}
+.station {height: 10%;}
