--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
    </div>
 
    <div class="container">
-     <!-- Example row of columns -->
+     <!-- Example row of columns
      <div class="row">
        <div class="col-md-4">
          <h2>Why us?</h2>
@@ -22,11 +22,11 @@
       </div>
        <div class="col-md-4">
          <h2>Features</h2>
-         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+         <p></p>
          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
      </div>
-
+-->
      <hr>
 
      <footer>
