--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,11 @@
 <div class="col-md-4 col-md-offset-4">
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),:html => { :class => "form-horizontal", multipart: true }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <div class="form-group">
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
@@ -17,11 +18,12 @@
     <%= f.input :address1 ,required: true %>
     <%= f.input :address2 %>
     <%= f.input :city, required: true %>
-    <div class = "form-group">
     <%= f.input :state, :label => "State", :collection => us_states, :selected => "New Jersey"%>
-  </div>
     <%= f.input :zip_code, required: true %>
     <%= f.input :years_in_business, required: true %>
+      <h2> Attach <a href="#">required documents</a> </h2>
+    <%= f.attachment_field :document,required: true,  multiple: true, class: "btn btn-success"%>
+  </div>
   </div>
 
   <div class="form-actions">
